# secret-server

./: .gitignore  README.md  api_doc.yaml  render.yaml
frontend/: next.config.js  package-lock.json  package.json  vercel.json
frontend/src/app/: Types.ts  globals.css  layout.tsx  page.tsx
frontend/src/app/components/: FormCreateSecret.tsx  Logo.tsx  NavBar.tsx  NavigationButton.tsx  TabPanelSecretNormal.tsx
frontend/src/app/components/dialog/: DialogContainer.tsx
frontend/src/app/components/form/: FormButton.tsx  FormContainer.tsx  FormCreateSecret.tsx  FormFindSecret.tsx  FormInputField.tsx
frontend/src/app/components/navigation/: NavBar.tsx  NavigationButton.tsx
frontend/src/app/create/: page.tsx
frontend/src/app/find/: page.tsx
server/: build.sh  db.sqlite3  pyproject.toml  render.yaml
server/api/: fields.py  models.py  renderers.py  serializers.py  urls.py  views.py
server/api/migrations/: 0001_initial.py  0002_alter_secret_createdat.py  0003_alter_secret_secrettext.py  0004_rename_secret_fields.py
server/api/tests/: test_urls.py  test_views.py
server/server/: settings.py  urls.py
